feat(auth-service): Refactor User Registration endpoint
