# services/auth-service/docs/swagger.yaml
@@ -1,14 +1,5 @@
-basePath: /
+basePath: /api/v1/
 definitions:
-  auth.AuthResponse:
-    properties:
-      accessToken:
-        type: string
-      tokenType:
-        type: string
-      user:
-        $ref: '#/definitions/auth.User'
-    type: object
   auth.RegisterRequest:
     properties:
       confirmPassword:
@@ -34,6 +25,20 @@ definitions:
     - fullName
     - password
     type: object
+  auth.RegisterResponse:
+    properties:
+      message:
+        description: Successfully registered message
+        example: Registration successful. Please check your email
+        type: string
+      user:
+        allOf:
+        - $ref: '#/definitions/auth.User'
+        description: User's information
+    required:
+    - message
+    - user
+    type: object
   auth.User:
     properties:
       createdAt:
@@ -44,6 +49,8 @@ definitions:
         type: string
       id:
         type: integer
+      isActive:
+        type: boolean
       updatedAt:
         type: string
     type: object
@@ -76,7 +83,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/auth.AuthResponse'
+            $ref: '#/definitions/auth.RegisterResponse'
         "400":
           description: Bad Request
           schema:
